# quarble

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: cmd.rs  main.rs  util.rs
src/conf/: mod.rs  settings.rs
src/data/: action.rs  active_day.rs  current_work.rs  day.rs  jira_issue.rs  location.rs  mod.rs  recent_issues.rs  task.rs  test_support.rs  work.rs  work_day.rs  work_entry.rs
src/data/day_normalizer/: mod.rs  test.rs  we.rs
src/data/exporter/: mod.rs
src/db/: mod.rs  test.rs
src/parsing/: input_parser.rs  issue_parser.rs  mod.rs  parse_result.rs  round_mode.rs  time.rs  time_limit.rs  time_relative.rs
src/ui/: book.rs  book_single.rs  clip_read.rs  current_day.rs  current_view.rs  entry_edit.rs  exit.rs  export.rs  fast_day_end.rs  fast_day_start.rs  focus_handler.rs  issue_end_edit.rs  issue_start_edit.rs  keyboard_handler.rs  main_action.rs  message.rs  mod.rs  my_text_input.rs  recent_issues_view.rs  single_edit_ui.rs  stay_active.rs  style.rs  tab_bar.rs  time.rs  top_bar.rs  util.rs  view_id.rs  window_configurator.rs  work_entry_edit.rs  work_start_edit.rs
src/ui/book_single/: mod.rs  nparsing.rs  parsing.rs  test.rs
src/ui/settings_ui/: mod.rs  my_text_input.rs  shortcut_ui.rs
