[package]
name = "quarble"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"]}
serde_json = "1.*"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.*"
dirs = "4.*"
thiserror = "1.*"
env_logger = "0.9"
log = "0.4"
opentelemetry = { version = "0.16", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.15"
tracing = "0.1"
orbtk = { git = "https://github.com/AndiHofi/orbtk.git", branch = "develop" }
orbclient = { git = "https://github.com/AndiHofi/orbclient.git", branch = "master" }

[dependencies.tracing-subscriber]
version = "0.2"
features = ["registry"]
default-features = false

[profile.release]
lto = true


