[package]
name = "quarble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"]}
serde_json = "1.*"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.*"
dirs = "4.*"
thiserror = "1.*"
env_logger = "0.9"
log = "0.4"
opentelemetry = { version = "0.16", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.15"
tracing = "0.1"
arc-swap = "1.5"

iced_core = { git = "https://github.com/AndiHofi/iced", branch = "tmenu_changes"}
iced_winit = { git = "https://github.com/AndiHofi/iced", branch = "tmenu_changes"}
iced_wgpu = { git = "https://github.com/AndiHofi/iced", branch = "tmenu_changes"}
iced_futures = { git = "https://github.com/AndiHofi/iced", branch = "tmenu_changes"}

[dependencies.tracing-subscriber]
version = "0.2"
features = ["registry"]
default-features = false

[profile.release]
lto = true


